[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentoracle"
version = "0.1.0"
description = "LangChain-compatible integration for AgentOracle"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27.0",
]

[tool.setuptools]
packages = ["langchain_agentoracle"]
