[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "langchain-agentoracle"
version = "0.2.0"
description = "LangChain integration for AgentOracle — trust verification tools for AI agents"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain-core>=0.2.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
]

[tool.setuptools]
packages = ["langchain_agentoracle"]
